Resizable: use background-image:url(data:) instead of background-image:url(about:blank) as it's shorter and safer. Thanks @epascarello . Better fixes #7233 - Resizable: resizable handles fail to work in IE if transparent and content overlaps

--- a/themes/base/jquery.ui.resizable.css
+++ b/themes/base/jquery.ui.resizable.css
@@ -12,7 +12,7 @@
 	/* http://bugs.jqueryui.com/ticket/7233
 	 - Resizable: resizable handles fail to work in IE if transparent and content overlaps
 	*/
-	background-image:url(about:blank);
+	background-image:url(data:);
 }
 .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
 .ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
